feat: fixed SMIA KB definition for Swagger (YAML file) with some missing attributes and the addition of base64-url encoded requirement (due to the use of AAS and OWL identifiers). Generated code to manage GET methods in Capability API
